<resources>
    <string name="app_name">CNU컴공</string>
    <string name="bottom_navi_test2">일반</string>
    <string name="bottom_navi_text1">학사</string>
    <string name="bottom_navi_text3">사업단</string>
    <string name="bottom_navi_text4">취업</string>
    <string name="network_err_toast">네트워크가 연결되어 있지 않습니다</string>
    <string name="employ_url">https://computer.cnu.ac.kr/computer/notice/job.do</string>
    <string name="business_url">https://computer.cnu.ac.kr/computer/notice/project.do</string>
    <string name="general_url">https://computer.cnu.ac.kr/computer/notice/notice.do</string>
    <string name="bachelor_url">https://computer.cnu.ac.kr/computer/notice/bachelor.do</string>
    <string name="bottom_navi_text5">즐겨찾기</string>
    <string name="dialog_favorite_add_text">즐겨찾기에 추가하시겠습니까?</string>
    <string name="no_text">NO</string>
    <string name="yes_text">YES</string>
    <string name="explain_text">번호를 누르면 즐겨찾기 추가/해제, 내용을 누르면 해당 링크로 이동합니다.</string>
    <string name="dialog_favorite_delete_text">즐겨찾기를 삭제하시겠습니까?</string>
    <string name="add_success_text">추가되었습니다</string>
    <string name="delete_success_text">삭제되었습니다</string>
    <string name="user_id_text">example@gmail.com</string>
    <string name="user_pw_text">password</string>
    <string name="login_fail_text">로그인 실패</string>
    <string name="login_success_text">로그인</string>
    <string name="login_title_text">충남대학교 컴퓨터공학과</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="login_text">Login</string>
    <string name="univ_notice_text">대학교 공지사항</string>
    <string name="app_notice_text">앱 공지사항</string>
    <string name="please_univ_auth_text">충남대학교 포털에 로그인 후 빨간색 모자이크에 써져있는 단어를 입력해주세요. 이 과정은 충남대학교 학생인증을 위한 단계이며 한 번만 인증하시면 됩니다. :)</string>
    <string name="please_enter_text">입력해주세요</string>
    <string name="auth_confirm_text">인증확인</string>
    <string name="univ_auth_fail_msg">틀렸습니다. 다시한번 확인해주세요 :(</string>
    <string name="free_board_text">자유게시판</string>
    <string name="graduate_board_text">졸업생게시판</string>
    <string name="freshman_board_text">새내기게시판</string>
    <string name="employment_board_text">취업게시판</string>
    <string name="major_board_text">전공게시판</string>
    <string name="worry_board_text">고민-생각게시판</string>
    <string name="study_board_text">스터디-공모전게시판</string>
    <string name="write_text">작성하기</string>
    <string name="title_write_text">글 쓰기</string>
    <string name="board_write_rule_hint">인터넷 에티켓 문화를 지켜주세요 :)\n좋은 커뮤니티 문화 부탁드립니다.\n(최대 3000자)</string>
    <string name="no_extra_value_exception">No Extra Value</string>
    <string name="title_hint">제목</string>
    <string name="please_insert_content_msg">내용을 입력해주세요</string>
    <string name="write_err_msg">작성 에러</string>
    <string name="write_compelete_msg">작성 완료</string>
    <string name="max_image_select_msg">사진의 최대 개수는 10장 입니다.</string>
    <string name="please_enter_comment_hint">댓글을 입력하세요.</string>
    <string name="already_recommend_board_msg">이미 추천한 게시물입니다.</string>
    <string name="recommend_fail_msg">추천실패</string>
    <string name="search_title_content_hint">제목/내용 입력</string>
    <string name="app_notice_explain_text">예전에 학교 공지사항 보려고 만든 공지사항앱인데 조그만한 커뮤니티 기능을 추가해봤습니다.\n추가기능 요청 혹은 기여는 https://github.com/mtjin/cnu-notice-app-releaseversion 로 해주시면 감사하겠습니다 :)\n 기본기능만 넣은 상태인데 추가/새 기능은 추후에 시간이 된다면 업데이트 하겠습니다.  감사합니다 :)</string>
    <string name="delete_text">삭제</string>
    <string name="board_delete_fail_msg">게시글 삭제 실패</string>
</resources>
