<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_1"
        android:icon="@drawable/ic_bachelor_white_24dp"
        android:title="@string/bottom_navi_text1" />

    <item
        android:id="@+id/bottom_nav_2"
        android:icon="@drawable/ic_general_white_24dp"
        android:title="@string/bottom_navi_test2" />

    <item
        android:id="@+id/bottom_nav_3"
        android:icon="@drawable/ic_business_white_24dp"
        android:title="@string/bottom_navi_text3" />

    <item
        android:id="@+id/bottom_nav_4"
        android:icon="@drawable/ic_employ_white_24dp"
        android:title="@string/bottom_navi_text4" />

    <item
        android:id="@+id/bottom_nav_5"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="@string/bottom_navi_text5" />

</menu>