<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:elevation="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_tv_question"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/dialog_favorite_add_text"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhiteGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/dialog_tv_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/yes_text"
            android:textColor="@color/colorBlack" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhiteGray" />

        <TextView
            android:id="@+id/dialog_tv_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/no_text"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
</LinearLayout>