<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.mtjin.cnunoticeapp.views.board.BoardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_univ_auth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_16dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_univ_auth" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12dp"
                android:text="@string/please_univ_auth_text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_text"
                android:inputType="text"
                android:text="@={vm.univAuthText}" />

            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/btn_univ_auth_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhiteBlue"
                android:onClick="@{()->vm.requestUnivAuth()}"
                android:text="@string/auth_confirm_text"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                app:button_duration="200"
                app:button_scale="0.95" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>