<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.mtjin.cnunoticeapp.views.board_write.BoardWriteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/title_write_text"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_28dp"
            android:onClick="@{()->vm.insertBoard()}"
            android:text="@string/write_text"
            android:textColor="@color/colorWhiteBlue"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_image"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/button_add_pic"
                    android:onClick="@{()->vm.pickImage()}"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_content" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_28dp"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:layout_marginEnd="@dimen/margin_28dp"
                    android:hint="@string/title_hint"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={vm.title}"
                    android:textSize="@dimen/text_size_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_28dp"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:layout_marginEnd="@dimen/margin_49dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/board_write_rule_hint"
                    android:text="@={vm.content}"
                    android:textSize="@dimen/text_size_14sp"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>